[Docs] .gitignore 파일 수정

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ xcuserdata/
 # End of https://www.toptal.com/developers/gitignore/api/macos,xcode
 GoogleService-Info.plsit
 Info.plist
+MAKS/MAKS/MAKS.entitlements
