--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,13 @@ xcuserdata/
 GoogleService-Info.plsit
 Info.plist
 MAKS/MAKS/MAKS.entitlements
+
+### CocoaPods ###
+## CocoaPods GitIgnore Template
+
+# CocoaPods - Only use to conserve bandwidth / Save time on Pushing
+#           - Also handy if you have a large number of dependant pods
+#           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGNORE THE LOCK FILE
+Pods/
+
+# End of https://www.toptal.com/developers/gitignore/api/cocoapods
